<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="24dp"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/setSalario"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/textHint"
        android:textColorHint="@color/TextSecondary"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/textSubtitle"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="18dp"/>

    <RadioGroup
        android:id="@+id/rgPercentual"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorPrimary"
            android:text="@string/porcentagem_40" />

        <RadioButton
            android:id="@+id/rb45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorPrimary"
            android:text="@string/porcentagem_45" />

        <RadioButton
            android:id="@+id/rb50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorPrimary"
            android:text="@string/porcentagem_50" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/resultSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultSalario"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"/>
</LinearLayout>